fix z-index of winning poster

--- a/style.css
+++ b/style.css
@@ -176,16 +176,19 @@ option {
     max-width: 40vw;
     margin: 3vw;
     object-fit: contain;
+    position: relative;
 }
 
 .winner2 {
     transform: translate(-50%, 0);
     transition: all 1s ease-in-out;
+    z-index: 1000;
 }
 
 .winner1 {
     transform: translate(20vw, 0);
     transition: all 1s ease-in-out;
+    z-index: 1000;
 }
 
 .fade-out-fast {
